--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "ember-source": "~3.1.0",
     "ember-source-channel-url": "1.1.0",
     "ember-truth-helpers": "2.0.0",
-    "ember-visual-test": "0.2.7",
     "ember-try": "0.2.23",
+    "ember-visual-test": "github:hakubo/ember-visual-test#8ac4eaeb2abbf6b33d17f3bbab352c354a4fb4b6",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^6.0.1",
     "fs-extra": "5.0.0",
